--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html{
 }
 nav ul{
 	list-style: none;
+
 }
 
 nav ul li{
@@ -18,7 +19,7 @@ span{
 
 nav ul li{
 	display: inline;
-	border: 1px solid grey;
+	
 	padding: 5px 0 15px 0;
 }
  p{
@@ -29,4 +30,55 @@ nav ul li{
 header{
 	padding: 4px; 
 	font-size: 2em;
+	font-family: 'League Script', cursive;
+	color:#33ccff;
+	text-align: center;
+	background-image: url("img/moon.jpg");
+	height: 500px;
+	background-size: cover;
+}
+/* Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
