--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html{
 	box-sizing: border-box;
+	background-color:#000000;
 }
 nav ul{
 	list-style: none;
@@ -22,14 +23,47 @@ nav ul li{
 	
 	padding: 5px 0 15px 0;
 }
- p{
-	background-color:#3399ff;
+
+p1{
+	background-color:#000000;
 	font-size: 2.1em;
+	font-family: 'League Script', cursive;
+	color:#ffffff;
 	margin:30px;
+}
+	
+p2{
+	background-color:#000000;
+	font-size: 2.1em;
+	font-family: 'League Script', cursive;
+	color:#ffffff;
+	margin:30px;
+}
+
+p3{
+	background-color: #000000;
+	font-size: 2.1em;
+	font-family: 'League Script', cursive;
+	color:#ffffff;
+	margin:30px;
+}
+
+p4{
+	background-color: #000000;
+	font-size: 2.1em;
+	font-family: 'League Script', cursive;
+	color:#ffffff;
+	margin:30px;
+	float: left;
+}
+
+iframe{
+	float:right;
+
 }
 header{
 	padding: 4px; 
-	font-size: 2em;
+	font-size: 4em;
 	font-family: 'League Script', cursive;
 	color:#33ccff;
 	text-align: center;
@@ -82,3 +116,11 @@ header{
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
+
+img{
+	width: 500px;
+	height: 500px;
+
+}
+
+
